[package]
name = "word_lookup"
version = "0.1.0"
authors = ["Phineas Jensen <phin@zayda.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgi = "0.6.0"
percent-encoding = "2.1.0"
regex = "1"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
